--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
     "description": "Your project description",
     "main": "server.js",
     "scripts": {
-      "start": "node app.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "express-handlebars": "^5.3.4",
-      "mysql2": "^2.3.0",
-      "sequelize": "^6.9.0",
-      "dotenv": "^10.0.0",
-      "bcrypt": "^5.0.1",
-      "express-session": "^1.17.2",
-      "connect-session-sequelize": "^7.1.0"
+        "bcrypt": "^5.0.1",
+        "connect-session-sequelize": "^7.1.0",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-handlebars": "^5.3.4",
+        "express-session": "^1.17.2",
+        "mysql2": "^2.3.0",
+        "passport": "^0.7.0",
+        "sequelize": "^6.9.0"
     },
     "devDependencies": {
-      "nodemon": "^2.0.14"  
+        "nodemon": "^2.0.14"
     }
-  }
-  
+}
